--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,8 @@ jekyll-archives:
     tag: '/tag/:name/'
 
 # Disqus comments
-# disqus_shortname: bencentra
+comments: true 
+disqus_shortname: sangziii-github-io
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
@@ -79,38 +80,17 @@ social:
 
   - name: Facebook
     icon: facebook
-    username: thebencentra
-    url:
+    username: sangziii
+    url: https://www.facebook.com/sangjin.lee.545
     desc: Friend me on Facebook
     share: true
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: sangziii
+    url: https://github.com/sangziii
     desc: Fork me on GitHub
-    share: false
-
-  - name: LinkedIn
-    icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
-    desc: Connect with me on LinkedIn
     share: true
-
-  - name: Google+
-    icon: google-plus
-    username:
-    url:
-    desc: Add me to your Circles
-    share: true
-
-  - name: YouTube
-    icon: youtube
-    username:
-    url:
-    desc: Subscribe on YouTube
-    share: false
 
   - name: Instagram
     icon: instagram
